flux/apps/media/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: default
spec:
  selector:
    matchLabels:
      app: audiobookshelf
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.36.1
          resources:
            requests:
              cpu: 13m
              memory: 145Mi
            limits:
              # memory: 145Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: audiobookshelf-config
              mountPath: /config
            - name: audiobookshelf-metadata
              mountPath: /metadata
            - name: media-audiobooks
              mountPath: /audiobooks
      volumes:
        - name: audiobookshelf-config
          nfs:
            server: datasphere
            path: /Root/Volumes/audiobookshelf/config
        - name: audiobookshelf-metadata
          nfs:
            server: datasphere
            path: /Root/Volumes/audiobookshelf/metadata
        - name: media-audiobooks
          nfs:
            server: datasphere
            path: /Root/Media/Audiobooks
